--- a/project/templates/add.html
+++ b/project/templates/add.html
@@ -18,20 +18,27 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="../">Add Details</a>
+                <a class="nav-link" href="../add">Add Details</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../">Edit Details</a>
+                <a class="nav-link" href="../display">Display Details</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../">Display Details</a>
+                <a class="nav-link" href="../logout">Logout</a>
               </li>  
             </ul>
           </div>
         </div>
       </nav>
       <div>
-        <form action="" method="POST">
+        <h1>Add Details</h1>
+    
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
+    
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
             <label for="name">Name</label>
             <input type="text" name="name" placeholder="Enter your name"><br>
             <label for="age">Age</label>
@@ -42,6 +49,7 @@
             <input type="text" name="location" placeholder="Enter your location"><br>
             <label for="file">Files</label>
             <input type="file" name="file" placeholder="Enter your files"><br>
+            <button type="submit">Submit</button>
         </form>
       </div>
 </body>
