--- a/project/templates/display.html
+++ b/project/templates/display.html
@@ -2,32 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>My Documents</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../home">ME</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../">Add Details</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../">Edit Details</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../">Display Details</a>
-              </li>  
-            </ul>
-          </div>
+            <a class="navbar-brand" href="../home">ME</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../add">Add Details</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../display">Display Details</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../logout">Logout</a>
+                    </li>  
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
+
+    <div class="container mt-5">
+        <h1>My Documents</h1>
+
+        {% if details %}
+            <ul class="list-group">
+                {% for detail in details %}
+                    <li class="list-group-item">
+                        <strong>Name:</strong> {{ detail.user.username }} <br>  
+                        <strong>Age:</strong> {{ detail.age }} <br>
+                        <strong>Phone Number:</strong> {{ detail.phonenumber }} <br>
+                        <strong>Location:</strong> {{ detail.location }} <br>
+                        <img src="{{detail.image.url}}" alt="image">
+                        <a href="{% url 'delete' detail.pk %}" class="btn btn-danger">Delete</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>No details found.</p>
+        {% endif %}
+    </div>
+
 </body>
 </html>
