--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -17,14 +17,14 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="../">Add Details</a>
+                <a class="nav-link" href="../add">Add Details</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../">Edit Details</a>
+                <a class="nav-link" href="../display">Display Details</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../">Display Details</a>
-              </li>  
+                <a class="nav-link" href="../logout">Logout</a>
+              </li> 
             </ul>
           </div>
         </div>
