--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -18,6 +18,6 @@
 
         <button type="submit">Register</button>
     </form>
-    <a href="{% url 'login' %}">Already have an account? Login</a>
+    <a href="../">Already have an account? Login</a>
 </body>
 </html>
